crates/bitnet-cli/tests/snapshots/cli_snapshot_tests__compat_check_help.snap
---
source: crates/bitnet-cli/tests/cli_snapshot_tests.rs
expression: help
---
Check GGUF file compatibility using header validation

Usage: bitnet compat-check [OPTIONS] <PATH>

Arguments:
  <PATH>  Path to .gguf file

Options:
  -c, --config <PATH>        Configuration file path
      --json                 Output JSON
  -d, --device <DEVICE>      Device/backend label (cpu, cuda/gpu, hip/rocm, oneapi, npu/openvino-npu, nvidia-rtx-5070-ti-cuda/wgpu, metal/mpsgraph, apple-m4-metal, apple-m4-mpsgraph, apple-m4-cpu-neon, apple-m3-air-metal, apple-m3-air-mpsgraph, apple-m3-air-cpu-neon, auto). Apple M4 and M3 Air labels are distinct proof lanes
      --strict               Fail on unsupported version or suspicious counts
      --log-level <LEVEL>    Log level (trace, debug, info, warn, error)
      --show-kv              Show key-value metadata (limit with --kv-limit)
      --kv-limit <KV_LIMIT>  Limit number of KV pairs to show (default: 20) [default: 20]
      --threads <N>          Number of CPU threads
      --batch-size <SIZE>    Batch size for processing
  -h, --help                 Print help
