crates/bitnet-cli/tests/snapshots/cli_snapshot_tests__compat_check_missing_path_error.snap
---
source: crates/bitnet-cli/tests/cli_snapshot_tests.rs
expression: err
---
error: the following required arguments were not provided:
  <PATH>

Usage: bitnet compat-check <PATH>

For more information, try '--help'.
