crates/bitnet-cli/tests/snapshots/cli_snapshot_tests__inspect_help.snap
---
source: crates/bitnet-cli/tests/cli_snapshot_tests.rs
expression: help
---
Inspect model metadata and diagnostics

Usage: bitnet inspect [OPTIONS] <MODEL>

Arguments:
  <MODEL>  Model file path

Options:
  -c, --config <PATH>            Configuration file path
      --ln-stats                 Compute and display LayerNorm gamma statistics
  -d, --device <DEVICE>          Device/backend label (cpu, cuda/gpu, hip/rocm, oneapi, npu/openvino-npu, nvidia-rtx-5070-ti-cuda/wgpu, metal/mpsgraph, apple-m4-metal, apple-m4-mpsgraph, apple-m4-cpu-neon, apple-m3-air-metal, apple-m3-air-mpsgraph, apple-m3-air-cpu-neon, auto). Apple M4 and M3 Air labels are distinct proof lanes
      --gate <GATE>              Gate behavior: none|auto|policy [default: auto]
      --log-level <LEVEL>        Log level (trace, debug, info, warn, error)
      --policy <POLICY>          Policy file (YAML) for custom validation rules
      --policy-key <POLICY_KEY>  Policy key (architecture ID) for rules lookup
      --threads <N>              Number of CPU threads
      --batch-size <SIZE>        Batch size for processing
      --json                     Output format as JSON
  -h, --help                     Print help
