crates/bitnet-cli/tests/snapshots/cli_snapshot_tests__mac_receipts_check_help.snap
---
source: crates/bitnet-cli/tests/cli_snapshot_tests.rs
assertion_line: 176
expression: help
---
Check Apple M4 SLM answer/warm-session receipts for hidden fallback or overclaims

Usage: bitnet mac receipts-check [OPTIONS] <PATH>

Arguments:
  <PATH>  Receipt file or directory containing JSON receipts

Options:
  -c, --config <PATH>               Configuration file path
      --regression-baseline <PATH>  Compare Apple M4 dense SLM receipts against a published baseline receipt
  -d, --device <DEVICE>             Device/backend label (cpu, cuda/gpu, hip/rocm, oneapi, npu/openvino-npu, nvidia-rtx-5070-ti-cuda/wgpu, metal/mpsgraph, apple-m4-metal, apple-m4-mpsgraph, apple-m4-cpu-neon, apple-m3-air-cpu-neon, auto). Apple M4 and M3 Air labels are distinct proof lanes
      --json                        Emit JSON instead of text
      --log-level <LEVEL>           Log level (trace, debug, info, warn, error)
      --threads <N>                 Number of CPU threads
      --batch-size <SIZE>           Batch size for processing
  -h, --help                        Print help
